src/app/components/sidebar/settings/settings.component.scss
.container {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  align-items: center;
  overflow-y: auto;

  h1 {
    margin-top: 2vh;
    margin-bottom: 3vh;
    font-family: "JetBrains Mono", serif;
    font-size: 1.6rem;
  }
}

.settingContainer {
  display: flex;
  align-items: center;
  flex-direction: column;
  width: 80%;
  border-radius: 10px;
  padding-top: 1vh;
  padding-bottom: 1vh;
  margin-bottom: 3vh;

  > * {
    margin-left: 5%;
  }

  p {
    overflow-wrap: break-word;
    margin: 0 7% 2vh;
  }
}

